[package]
name = "kubizone-common"
description = "Typed Rust structures for representing partially and fully qualified domain names."
repository = "https://github.com/kubi-zone/kubizone-common"
keywords = ["kubernetes", "kubizone"]
version = "0.7.5"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
schemars = "0.8.16"
serde = { version = "1.0.192", features = ["derive"] }

[dev-dependencies]
serde_yaml = "0.9"